--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100009033586745%22%3A%22pWydbwLS%22%7D",
+        "value": "%7B%22100009033586745%22%3A%22PvfnfwSh%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.261Z",
-        "lastAccessed": "2026-02-16T20:34:10.261Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "dpr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.261Z",
-        "lastAccessed": "2026-02-16T20:34:10.261Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.261Z",
-        "lastAccessed": "2026-02-16T20:34:10.261Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.261Z",
-        "lastAccessed": "2026-02-16T20:34:10.262Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.262Z",
-        "lastAccessed": "2026-02-16T20:34:10.262Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "wl_cbv",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.262Z",
-        "lastAccessed": "2026-02-16T20:34:10.262Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "datr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.262Z",
-        "lastAccessed": "2026-02-16T20:34:10.262Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.262Z",
-        "lastAccessed": "2026-02-16T20:34:10.262Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "wd",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.262Z",
-        "lastAccessed": "2026-02-16T20:34:10.262Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "c_user",
@@ -86,25 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.262Z",
-        "lastAccessed": "2026-02-16T20:34:10.262Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "xs",
-        "value": "46%3AAkUgM035OjIUpg%3A2%3A1771271140%3A-1%3A-1%3A%3AAcy_33wzAvgNAeRGHXYUl3RgB5qGzFlEg_twcqr-cA",
+        "value": "40%3AB-WohZu2JacfBg%3A2%3A1771274154%3A-1%3A-1%3A%3AAcyUmiZi-cjDaiB7-WUmpkD2UCR65aLoggsO7FvrVw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.262Z",
-        "lastAccessed": "2026-02-16T20:34:10.262Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     },
     {
         "key": "fr",
-        "value": "2hkb7zcQNepKc0for.AWcCUXhvZD4m4fgg2usg695SJKvbGkLJSuKQQ3zrzMxzjugXaKs.Bpk3PI..AAA.0.0.Bpk3td.AWfsxnySqiD_XRLR65_ti7DeclQ",
+        "value": "2jtDWvo3Y2QL8InWJ.AWeaRn6MJAhiGw9SAPViqk9a2N3Reov2lDydZosZ-YmA1ZlSSkc.Bpk3-t..AAA.0.0.Bpk4AX.AWeFw5ELq9tYvQJaHW60yY3crMs",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-16T20:34:10.262Z",
-        "lastAccessed": "2026-02-16T20:34:10.262Z"
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1771274270145%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-16T20:37:59.568Z",
+        "lastAccessed": "2026-02-16T20:37:59.568Z"
     }
 ]
