--- a/Data/config/envconfig.json
+++ b/Data/config/envconfig.json
@@ -1,8 +1,8 @@
 {
-  "BOTNAME": "Muskan",
+  "BOTNAME": "ROMEO",
   "PREFIX": ".",
   "ADMINBOT": [
-    "100009033586745",
+    61551447140312",
     "",
     ""
   ],
